--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,17 +1,53 @@
+html {
+  scroll-behavior: smooth;
+}
+
 /* Slider */
 .slider-item {
   height: 600px;
   width: 100%;
-  background: #750c0c;
+  background: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+.slider-content {
+  position: relative;
+  z-index: 3;
+}
+
+.bg-thumb {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.bg-thumb > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.bg-thumb::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(29, 29, 29, 0.7);
+  z-index: 2;
+}
+
 /* End Slider */
 
 /* ============================================================= */
 
 /* Navbar */
+.c-navbar-toggler {
+  background: #0088cc;
+}
 .c-navbar {
   height: 70px;
 }
@@ -20,13 +56,13 @@
   margin-right: 7px;
 }
 
-.c-link{
+.c-link {
   font-size: 75%;
 }
 
 .c-link:hover,
 .c-active {
-  color: #0088CC !important;
+  color: #0088cc !important;
 }
 /* End Navbar */
 
@@ -34,7 +70,7 @@
 
 /* Services */
 .services {
-  background: #0088CC;
+  background: #0088cc;
   height: auto;
 }
 
@@ -50,11 +86,11 @@
 /* ============================================================= */
 
 /* Projects */
-.projects{
-  background: #ffffff;;
+.projects {
+  background: #ffffff;
 }
 
-.project-wrapper{
+.project-wrapper {
   position: relative;
   overflow: hidden;
 }
@@ -64,26 +100,26 @@
   transition: all 0.3s;
 }
 
-.project-thumb::after{
+.project-thumb::after {
   content: "";
   position: absolute;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  width:100%;
-  height:100%;
-  top:0;
-  left:0;
-  z-index:1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
   background: rgba(33, 37, 41, 0.301);
   opacity: 0;
 }
 
-.project-wrapper:hover .project-thumb::after{
+.project-wrapper:hover .project-thumb::after {
   opacity: 1;
 }
 
 .project-wrapper:hover .project-thumb > img {
-  transform: scale(1.15)
+  transform: scale(1.15);
 }
 
 .project-wrapper:hover .project-action {
@@ -96,21 +132,21 @@
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   background: rgba(33, 37, 41, 0.8);
-  color: #FFF;
+  color: #fff;
   font-weight: 600;
   left: 0;
-  letter-spacing: -.05em;
+  letter-spacing: -0.05em;
   position: absolute;
   z-index: 2;
   /* width:%; */
   font-size: 14px;
   padding: 13px 21px 23px 13px;
-  top:70%;
+  top: 70%;
 }
 
 .project-category {
   position: absolute;
-  background-color: #0088CC;
+  background-color: #0088cc;
   border-radius: 2px;
   font-size: 0.6em;
   font-weight: 600;
@@ -119,56 +155,56 @@
   padding: 2px 12px;
   text-transform: uppercase;
   z-index: 2;
-  top:77%;
-  left:0%;
-  margin-left:15px;
+  top: 77%;
+  left: 0%;
+  margin-left: 15px;
   line-height: 2.3;
 }
 
-.project-action{
+.project-action {
   position: absolute;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   background: rgba(33, 37, 41, 0.8);
-  width:50px;
-  height:50px;
+  width: 50px;
+  height: 50px;
   border-radius: 0px 0px 0px 3px;
   /* background */
-  top:-100px ;
-  right:-100px;
+  top: -100px;
+  right: -100px;
 }
 
-.project-action::after{
+.project-action::after {
   content: "";
   position: absolute;
-  top:0;
-  right:0;
-  width:100%;
-  height:100%;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   background: rgb(33, 37, 41);
-  z-index:2;
+  z-index: 2;
   border-radius: 0px 0px 0px 3px;
   /* z-index:2; */
   opacity: 0;
 }
 
-.project-action:hover::after{
+.project-action:hover::after {
   opacity: 1;
   /* z-index: 2; */
 }
 
 .project-action > i {
-    font-size: 14px;
-    right: 50%;
-    position: absolute;
-    top: 50%;
-    color: #FFF;
-    z-index:3;
-    -webkit-transform: translate(50%, -50%);
-    transform: translate(50%, -50%);
-    margin: -2px -1px 0 0px;
+  font-size: 14px;
+  right: 50%;
+  position: absolute;
+  top: 50%;
+  color: #fff;
+  z-index: 3;
+  -webkit-transform: translate(50%, -50%);
+  transform: translate(50%, -50%);
+  margin: -2px -1px 0 0px;
 }
 /* End Projects */
 
@@ -176,20 +212,20 @@
 
 /* Owl custom ui */
 .owl-dot.active span,
- .owl-theme .owl-dots .owl-dot:hover span {
-   background : #0088CC !important;
- }
- /* End Owl custom ui */
+.owl-theme .owl-dots .owl-dot:hover span {
+  background: #0088cc !important;
+}
+/* End Owl custom ui */
 
- /* ============================================================= */
+/* ============================================================= */
 
- /* Clients */
-.clients{
+/* Clients */
+.clients {
   position: relative;
-  background-image: url('./../img/bg-one-page-1-1.jpg');
+  background-image: url("./../img/bg-one-page-1-1.jpg");
   background-size: cover;
   background-position: center;
-  height:auto;
+  height: auto;
 }
 
 .clients::before {
@@ -200,14 +236,13 @@
   height: 100%;
   top: 0;
   left: 0;
-  z-index:1;
+  z-index: 1;
   background: #212529d5;
-
 }
 
 .clients > section {
   position: relative;
-  z-index:2;
+  z-index: 2;
 }
 
 .clients-quote > blockquote {
@@ -216,7 +251,7 @@
   /* background:red; */
 }
 
-.clients-quote > blockquote::before{
+.clients-quote > blockquote::before {
   color: #0099e6;
   display: block !important;
   left: 10px;
@@ -228,7 +263,7 @@
   position: absolute;
 }
 
-.clients-quote > blockquote::after{
+.clients-quote > blockquote::after {
   color: #0099e6;
   display: block !important;
   right: 10px;
@@ -241,71 +276,131 @@
 }
 
 .author > p > strong {
-  font-size:14px;
+  font-size: 14px;
 }
 /* End clients */
 
 /* ============================================================= */
 
 /* Members - Team meet */
-.c-card-border-less{
+.c-card-border-less {
   border: none;
 }
 
 .profile-thumb > img {
-  width:100%;
-  height:auto;
+  width: 100%;
+  height: auto;
 }
 
-.circle-btn{
-  width:30px;
-  height:30px;
+.circle-btn {
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
-  float:left;
+  float: left;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #0088CC;
+  background: #0088cc;
 }
 /* End Members - Team meet */
 
 /* ============================================================= */
 
+/* Contact */
+
+.c-form-group {
+  width: 100%;
+  height: auto;
+  font-size: 0.85rem;
+  /* background:red; */
+}
+
+.c-form-group > input[type="text"] {
+  padding: 0.7rem 1rem;
+  height: 34px;
+  border: 0px;
+  border-radius: 4px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.c-form-group > textarea {
+  padding: 0.7rem 1rem;
+  border: 0px;
+  border-radius: 4px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.c-form-group > input:focus,
+.c-form-group > textarea:focus {
+  outline: 0px;
+}
+
+.c-btn {
+  background: #0088cc;
+  border-radius: 35px;
+  padding: 12px 48px;
+}
+
+.contact-info {
+  background: #0088cc;
+}
+
+.contact-elm {
+  display: flex;
+}
+
+.c-footer {
+  display: flex;
+  height: 90px;
+  justify-content: center;
+  align-items: center;
+}
+
+/* End Contact */
+
+/* ============================================================= */
+
 /* Helpers */
 .light-bg {
-  background:rgb(223, 223, 223);
+  background: rgb(223, 223, 223);
 }
 
 .black-bg {
   background: #212529;
 }
 
-.mb-10{
-  margin-bottom: 6rem!important;
+.mb-10 {
+  margin-bottom: 6rem !important;
 }
 
 .line-height-5 {
-  line-height:1.5 !important;
+  line-height: 1.5 !important;
 }
 
 .text-5 {
-  font-size: 1.40em !important;
+  font-size: 1.4em !important;
 }
 
 .text-3 {
-  font-size: 0.8em !important;
+  font-size: 0.9em !important;
+}
+
+.text-1 {
+  font-size: 0.7em !important;
 }
 
 .text-2 {
-  font-size: .9em !important;
+  font-size: 0.9em !important;
 }
 
 .text-4 {
   font-size: 1.2em !important;
 }
 
-.letter-space--2{
-  letter-spacing:-2px;
+.letter-space--2 {
+  letter-spacing: -2px;
 }
 
 .opacity-8 {
@@ -318,7 +413,15 @@
 }
 
 .pt-10 {
-  padding-top: 6rem!important;
+  padding-top: 6rem !important;
+}
+
+.pt-8 {
+  padding-top: 4rem !important;
+}
+
+.pb-8 {
+  padding-bottom: 4rem !important;
 }
 
 .p-9 {
@@ -326,18 +429,45 @@
 }
 
 .pb-10 {
-  padding-bottom: 6rem!important;
+  padding-bottom: 6rem !important;
 }
 
 .pt-11 {
-  padding-top: 7rem!important;
+  padding-top: 7rem !important;
 }
 
 .pb-11 {
-  padding-bottom: 7rem!important;
+  padding-bottom: 7rem !important;
 }
 
-.text-grey{
+.text-grey {
   color: #777;
 }
+
+.c-text-light {
+  letter-spacing: -0.5px;
+  opacity: 0.75;
+}
 /* End helpers */
+
+/* ============================================================= */
+
+/* Mobile toggle navbar */
+@media only screen and (max-width: 990px) {
+  .mobile-navbar {
+    margin-top: 20px;
+    background: #212529;
+    border-radius: 3px;
+  }
+
+  .c-link:hover,
+  .c-active {
+    color: #ffffff !important;
+    background: #0088cc;
+  }
+
+  .nav-item {
+    margin-right: 0px;
+  }
+}
+/* End Mobile Toggle Navbar */
